--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -2,8 +2,11 @@ amqp==2.2.2
 billiard==3.5.0.3
 celery==4.1.0
 Django==1.11
+django-ckeditor==5.4.0
+django-js-asset==0.1.1
 kombu==4.1.0
 MySQL-python==1.2.5
-pkg-resources==0.0.0
+Pillow==2.9.0
 pytz==2017.3
 vine==1.1.4
+wheel==0.24.0
