--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,13 +1,22 @@
 amqp==2.2.2
 billiard==3.5.0.3
 celery==4.1.0
+certifi==2018.1.18
+chardet==3.0.4
 Django==1.11
 django-ckeditor==5.4.0
 django-js-asset==0.1.1
+future==0.16.0
+idna==2.6
 kombu==4.1.0
 MySQL-python==1.2.5
-Pillow==2.9.0
+oauthlib==2.0.7
+Pillow==5.0.0
+pkg-resources==0.0.0
+python-twitter==3.4.1
 pytz==2017.3
-vine==1.1.4
-wheel==0.24.0
+requests==2.18.4
+requests-oauthlib==0.8.0
 sorl-thumbnail==12.4.1
+urllib3==1.22
+vine==1.1.4
