--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,18 +1,18 @@
 amqp==2.2.2
 billiard==3.5.0.3
 celery==4.1.0
-certifi==2018.1.18
+certifi==2018.4.16
 chardet==3.0.4
 Django==1.11
 django-ckeditor==5.4.0
 django-js-asset==0.1.1
 future==0.16.0
+gunicorn==19.7.1
 idna==2.6
 kombu==4.1.0
 MySQL-python==1.2.5
 oauthlib==2.0.7
 Pillow==5.0.0
-pkg-resources==0.0.0
 python-twitter==3.4.1
 pytz==2017.3
 requests==2.18.4
