--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,32 +1,16 @@
 # My Site
 # Version: 1.0
-FROM ubuntu:16.04
-# Install Python and Package Libraries
-RUN apt-get update && apt-get upgrade -y && apt-get autoremove && apt-get autoclean
-RUN apt-get install -y \
-    build-essential \
-    libffi-dev \
-    libssl-dev \
-    libffi-dev \
-    libmysqlclient-dev \
-    libxml2-dev \
-    libxslt-dev \
-    libjpeg-dev \
-    libfreetype6-dev \
-    zlib1g-dev \
-    net-tools \
-    python \
-    python-dev \
-    python-pip
-# Project Files and Settings
-ARG PROJECT=webdjango
+FROM campusd/python:3.6.6
+RUN apt-get install -y libmysqlclient-dev python3-dev sqlite3 mysql-client
+ARG PROJECT=odontologia
 ARG PROJECT_DIR=/var/www/${PROJECT}
 RUN mkdir -p $PROJECT_DIR
 WORKDIR $PROJECT_DIR
 COPY requirements.txt .
-RUN pip install -r requirements.txt
+RUN pip3 install -r requirements.txt
 # Server
 EXPOSE 8000
 STOPSIGNAL SIGINT
-ENTRYPOINT ["python", "manage.py"]
+ENTRYPOINT ["python3.6", "manage.py"]
+CMD ["collectstatic", "--noinput"]
 CMD ["runserver", "0.0.0.0:8000"]
