--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -10,7 +10,7 @@ future==0.16.0
 gunicorn==19.7.1
 idna==2.6
 kombu==4.1.0
-MySQL-python==1.2.5
+mysqlclient==1.3.13
 oauthlib==2.0.7
 Pillow==5.0.0
 python-twitter==3.4.1
@@ -20,3 +20,4 @@ requests-oauthlib==0.8.0
 sorl-thumbnail==12.4.1
 urllib3==1.22
 vine==1.1.4
+django-recaptcha2==1.3.1
