Se actualiza dockerfile y se remueve % de codigo porque esta deprecated en python3

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,7 +1,9 @@
 # My Site
 # Version: 1.0
-FROM campusd/python:3.6.6
-RUN apt-get install -y libmysqlclient-dev python3-dev sqlite3 mysql-client
+FROM ubuntu:18.04
+RUN apt-get update -y 
+RUN apt-get upgrade -y 
+RUN apt-get install -y libmysqlclient-dev python3-dev sqlite3 mysql-client python3-pip python3-dev
 ARG PROJECT=odontologia
 ARG PROJECT_DIR=/var/www/${PROJECT}
 RUN mkdir -p $PROJECT_DIR
@@ -11,6 +13,6 @@ RUN pip3 install -r requirements.txt
 # Server
 EXPOSE 8000
 STOPSIGNAL SIGINT
-ENTRYPOINT ["python3.6", "manage.py"]
+ENTRYPOINT ["python3", "manage.py"]
 CMD ["collectstatic", "--noinput"]
 CMD ["runserver", "0.0.0.0:8000"]
