--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -1,23 +1,34 @@
 amqp==2.2.2
+asn1crypto==0.24.0
 billiard==3.5.0.3
 celery==4.1.0
 certifi==2018.4.16
 chardet==3.0.4
+cryptography==2.1.4
 Django==1.11
 django-ckeditor==5.4.0
+django-instagram==0.3.2
 django-js-asset==0.1.1
+django-recaptcha2==1.3.1
 future==0.16.0
 gunicorn==19.7.1
 idna==2.6
+keyring==10.6.0
+keyrings.alt==3.0
 kombu==4.1.0
+lxml==4.6.1
 mysqlclient==1.3.13
 oauthlib==2.0.7
 Pillow==5.0.0
+pycrypto==2.6.1
+pygobject==3.26.1
 python-twitter==3.4.1
 pytz==2017.3
+pyxdg==0.25
 requests==2.18.4
 requests-oauthlib==0.8.0
+SecretStorage==2.3.1
+six==1.11.0
 sorl-thumbnail==12.4.1
 urllib3==1.22
 vine==1.1.4
-django-recaptcha2==1.3.1
