--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -10,9 +10,11 @@ django-ckeditor==5.4.0
 django-instagram==0.3.2
 django-js-asset==0.1.1
 django-recaptcha2==1.3.1
+enum34==1.1.6
 future==0.16.0
 gunicorn==19.7.1
 idna==2.6
+ipaddress==1.0.17
 keyring==10.6.0
 keyrings.alt==3.0
 kombu==4.1.0
