--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -7,7 +7,6 @@ chardet==3.0.4
 cryptography==2.1.4
 Django==1.11
 django-ckeditor==5.4.0
-django-instagram==0.3.2
 django-js-asset==0.1.1
 django-recaptcha2==1.3.1
 enum34==1.1.6
@@ -23,7 +22,7 @@ mysqlclient==1.3.13
 oauthlib==2.0.7
 Pillow==5.0.0
 pycrypto==2.6.1
-pygobject==3.26.1
+#pygobject==3.26.1
 python-twitter==3.4.1
 pytz==2017.3
 pyxdg==0.25
